<resources>
    <string name="toast_wallet_reset">Your wallet was reset!\nIt will take some time to recover.</string>
    <string name="toast_start_external_document_failed">There is no web browser installed to open the external document.</string>
    <string name="toast_start_external_document_error">Web browser error: %s</string>
    <string name="toast_start_storage_provider_selector_failed">No suitable cloud storage provider is installed.\nYou need something like \"Nextcloud\" or \"Google Drive\".</string>
    <string name="wallet_disclaimer_fragment_remind_safety">Use at your own risk. Read the &lt;u&gt;safety notes&lt;/u&gt;.</string>
    <string name="wallet_disclaimer_fragment_remind_backup">You need to &lt;u&gt;back up your wallet&lt;/u&gt;!</string>
    <string name="blockchain_state_progress_hours">%1$s, %2$d hours behind</string>
    <string name="blockchain_state_progress_days">%1$s, %2$d days behind</string>
    <string name="blockchain_state_progress_weeks">%1$s, %2$d weeks behind</string>
    <string name="blockchain_state_progress_months">%1$s, %2$d months behind</string>
    <string name="blockchain_state_progress_downloading">Synchronizing with network</string>
    <string name="blockchain_state_progress_stalled">Synchronization stalled</string>
    <string name="blockchain_state_progress_problem_storage">Problem with synchronization: Low storage space</string>
    <string name="blockchain_state_progress_problem_network">Problem with synchronization: No network connectivity</string>
    <string name="wallet_address_fragment_clipboard_msg">Bitcoin address copied to clipboard</string>
    <string name="wallet_address_dialog_fragment_hint">To protect your privacy, your address will change once it receives a payment.</string>
    <string name="wallet_balance_fragment_insecure_device">Your device is old and insecure. Please only use for small amounts.</string>
    <string name="wallet_balance_fragment_replaying">Balance is unavailable during replay.</string>
    <string name="exchange_rates_activity_title">Exchange rates</string>
    <string name="exchange_rates_fragment_empty_search">Could not find exchange rate.</string>
    <string name="exchange_rates_fragment_default">(default)</string>
    <string name="exchange_rates_fragment_rate">rate</string>
    <string name="exchange_rates_fragment_balance">balance</string>
    <string name="exchange_rates_fragment_source">Price from %s</string>
    <string name="exchange_rates_options_search">Search exchange rate</string>
    <string name="wallet_transactions_fragment_empty_text_received">No Bitcoins received so far.</string>
    <string name="wallet_transactions_fragment_empty_text_sent">No Bitcoins sent so far.</string>
    <string name="wallet_transactions_fragment_empty_text_howto">How to get Bitcoins?\nTrade for traditional money,\nsell goods or services or\nearn by working.</string>
    <string name="wallet_transactions_fragment_empty_remind_backup">Please back up your wallet\nbefore receiving any Bitcoins!</string>
    <string name="wallet_transactions_row_warning_backup">Congratulations, you received your first payment! Have you already &lt;u&gt;backed up your wallet&lt;/u&gt;, to protect against loss?</string>
    <string name="wallet_transactions_row_warning_storage_encryption">Hint: to increase the safety of your wallet, you can &lt;u&gt;encrypt your device&lt;/u&gt;. This also protects data of other apps.</string>
    <string name="wallet_transactions_row_warning_chain_forking">The Bitcoin network is undergoing maintenance. You\'re advised to not send or receive any coins until maintenance is finished. &lt;u&gt;More information.&lt;/u&gt;</string>
    <string name="wallet_transactions_fragment_coinbase">mined</string>
    <string name="wallet_transactions_fragment_internal">internal</string>
    <string name="wallet_transactions_options_filter">Filter</string>
    <string name="wallet_transactions_options_filter_all">All payments</string>
    <string name="wallet_transactions_options_filter_received">Received payments</string>
    <string name="wallet_transactions_options_filter_sent">Sent payments</string>
    <string name="wallet_options_request_legacy">Request to legacy address</string>
    <string name="wallet_options_safety_menu">Safety</string>
    <string name="wallet_options_encrypt_keys_set">Set spending PIN</string>
    <string name="wallet_options_encrypt_keys_change">Change spending PIN</string>
    <string name="wallet_options_safety">Safety notes</string>
    <string name="wallet_options_technical_notes_title">Technical notes</string>
    <string name="wallet_options_donate">Tip / donate</string>
    <string name="wallet_donate_address_label">Donation for Bitcoin Wallet</string>
    <string name="alert_dialogs_fragment_insecure_device_title">Security alert</string>
    <string name="wallet_low_storage_dialog_title">Internal device storage space low!</string>
    <string name="wallet_low_storage_dialog_msg">Bitcoin Wallet uses internal storage for remembering transactions and blocks. If it runs out of space, it will stop working and your Bitcoins will be at risk!\n\nDo you want to open the Application Manager to uninstall unneeded apps?</string>
    <string name="wallet_low_storage_dialog_button_apps">Manage apps</string>
    <string name="wallet_timeskew_dialog_title">Check date &amp; time settings</string>
    <string name="wallet_timeskew_dialog_msg">Your device time is off by %d minutes. You probably cannot send or receive Bitcoins due to this problem.\n\nYou should check and if necessary correct your date, time and timezone settings.</string>
    <string name="wallet_version_dialog_title">A new version is available!</string>
    <string name="wallet_version_dialog_msg">This version fixes important bugs. For details, see the change log on %s.</string>
    <string name="wallet_version_dialog_msg_deprecated">If you don\'t see an update, this probably means your version of Android isn\'t supported any more.</string>
    <string name="wallet_version_dialog_button_binary">Download</string>
    <string name="wallet_old_sdk_dialog_title">Android version is out of date</string>
    <string name="wallet_old_sdk_dialog_message">Chances are that one of the next releases of Bitcoin Wallet will not support your device any more. In some cases, it can get difficult to spend coins on this device.\n\nUnless you know what you are doing, it is recommended to move out your coins soon.</string>
    <string name="alert_dialogs_fragment_settings_failed_title">Problem with opening of settings</string>
    <string name="alert_dialogs_fragment_too_much_balance_dialog_title">Keep the risk low</string>
    <string name="alert_dialogs_fragment_too_much_balance_dialog_message">The amount in your wallet is quite high for carrying in your pocket. Please move some to a safer place, like a cold wallet.</string>
    <string name="alert_dialogs_fragment_battery_optimization_dialog_title">Receive payments in background</string>
    <string name="alert_dialogs_fragment_battery_optimization_dialog_message">At the moment your device is configured to only notify incoming payments while Bitcoin Wallet is visible – due to battery usage.\n\nWe suggest allowing the app to always stay up-to-date with the blockchain, even in the background.\n\nDon\'t worry, we\'ll still mind your battery.</string>
    <string name="alert_dialogs_fragment_battery_optimization_dialog_button_allow">Allow</string>
    <string name="send_coins_activity_title">Send Bitcoins</string>
    <string name="send_coins_fragment_request_payment_request_progress">Fetching signature from %s…</string>
    <string name="send_coins_fragment_request_payment_request_failed_title">Fetching payment request failed</string>
    <string name="send_coins_fragment_request_payment_request_failed_message">The payee (%1$s) is using an incompatible payment protocol (reason: %2$s).</string>
    <string name="send_coins_options_fee_category">Fee</string>
    <string name="send_coins_options_fee_category_economic">Economic</string>
    <string name="send_coins_options_fee_category_normal">Normal</string>
    <string name="send_coins_options_fee_category_priority">Priority</string>
    <string name="send_coins_options_empty">Empty wallet</string>
    <string name="raise_fee_dialog_title">Raise network fee</string>
    <string name="sweep_wallet_activity_title">Sweep paper wallet</string>
    <string name="request_coins_activity_title">Request Bitcoins</string>
    <string name="request_coins_options_local_app_title">Request from local app</string>
    <string name="address_book_activity_title">Address book</string>
    <string name="address_book_context_send_title">Send Bitcoins to address</string>
    <string name="address_book_context_edit_title">Edit address</string>
    <string name="address_book_context_remove_title">Remove address</string>
    <string name="address_book_context_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="network_monitor_activity_title">Network monitor</string>
    <string name="import_keys_dialog_title">Restore wallet</string>
    <string name="restore_wallet_dialog_replace_warning">You are about to replace your current wallet. Any coins in the current wallet will be lost unless you\'ve got a separate backup of that.</string>
    <string name="import_keys_dialog_warning">Important: Do not load private keys from dubious sources! Others can gain control over your funds if you do.</string>
    <string name="export_keys_dialog_title">Back up wallet</string>
    <string name="backup_wallet_dialog_message">Your backup will be encrypted with the chosen password and written to external storage.</string>
    <string name="backup_wallet_dialog_warning_encrypted">Your wallet is protected by a spending PIN. Make sure you remember the PIN in addition to the backup password!</string>
    <string name="import_export_keys_dialog_password">password</string>
    <string name="backup_wallet_dialog_password_again">again</string>
    <string name="backup_wallet_dialog_password_mismatch">mismatch!</string>
    <string name="import_export_keys_dialog_show">Show password</string>
    <string name="encrypt_keys_dialog_title">Wallet protection</string>
    <string name="preferences_activity_title">Settings</string>
    <string name="about_version_title">Version</string>
    <string name="about_copyright_title">Copyright</string>
    <string name="about_license_title">License</string>
    <string name="about_source_title">Source code</string>
    <string name="about_category_credits">This app is using…</string>
    <string name="about_credits_zxing_title">ZXing, a QR-code processing library</string>
    <string name="about_credits_bouncycastle_title">Bouncy Castle, a cryptography library</string>
    <string name="about_credits_okhttp_title">OkHttp, an HTTP client library</string>
    <string name="about_credits_moshi_title">Moshi, a JSON library</string>
    <string name="about_credits_guava_title">Guava, a collection of useful helpers</string>
    <string name="about_credits_slf4j_title">SLF4J, a logging framework</string>
    <string name="about_market_app_title">%s page</string>
    <string name="about_market_app_summary">Review or rate the app</string>
    <string name="button_help">Help</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit">Edit</string>
    <string name="button_copy">Copy</string>
    <string name="button_share">Share</string>
    <string name="button_set_as_default">Set as default</string>
    <string name="button_request_coins">Request coins</string>
    <string name="button_send_coins">Send coins</string>
    <string name="button_scan">Scan</string>
    <string name="action_show_qr">Show QR code</string>
    <string name="action_browse">Browse</string>
    <string name="private_key_password">PIN</string>
    <string name="private_key_bad_password">bad PIN!</string>
</resources>