<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/wallet_options_request"
		android:icon="@drawable/ic_send_flipped_white_24dp"
		app:showAsAction="always|withText"
		android:title="@string/request_coins_activity_title"
		android:titleCondensed="@string/button_request_coins"
		android:visible="@bool/wallet_actions_top"/>
	<item
		android:id="@+id/wallet_options_send"
		android:icon="@drawable/ic_send_white_24dp"
		app:showAsAction="always|withText"
		android:title="@string/send_coins_activity_title"
		android:titleCondensed="@string/button_send_coins"
		android:visible="@bool/wallet_actions_top"/>
	<item
		android:id="@+id/wallet_options_scan"
		android:icon="@drawable/ic_photo_camera_white_24dp"
		app:showAsAction="always|withText"
		android:title="@string/button_scan"
		android:visible="@bool/wallet_actions_top"/>
	<item
		android:id="@+id/wallet_options_address_book"
		android:icon="@drawable/ic_local_offer_white_24dp"
		app:showAsAction="ifRoom|withText"
		android:title="@string/address_book_activity_title"/>
	<item
		app:showAsAction="never"
		android:title="@string/wallet_options_safety_menu">
		<menu>
			<item
				android:id="@+id/wallet_options_safety"
				app:showAsAction="never"
				android:title="@string/wallet_options_safety"/>
			<item
				android:id="@+id/wallet_options_backup_wallet"
				app:showAsAction="never"
				android:title="@string/export_keys_dialog_title"/>
			<item
				android:id="@+id/wallet_options_restore_wallet"
				app:showAsAction="never"
				android:title="@string/import_keys_dialog_title"/>
			<item
				android:id="@+id/wallet_options_encrypt_keys"
				app:showAsAction="never"
				android:title="@string/encrypt_keys_dialog_title"/>
		</menu>
	</item>
	<item
		android:id="@+id/wallet_options_exchange_rates"
		app:showAsAction="never"
		android:title="@string/exchange_rates_activity_title"/>
	<item
		android:id="@+id/wallet_options_sweep_wallet"
		app:showAsAction="never"
		android:title="@string/sweep_wallet_activity_title"/>
	<item
		android:id="@+id/wallet_options_network_monitor"
		app:showAsAction="never"
		android:title="@string/network_monitor_activity_title"/>
	<item
		android:id="@+id/wallet_options_preferences"
		app:showAsAction="never"
		android:title="@string/preferences_activity_title"/>
	<item
		android:id="@+id/wallet_options_help"
		app:showAsAction="never"
		android:orderInCategory="999"
		android:title="@string/button_help"/>

</menu>