<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/wallet_transactions_context_edit_address"
		android:icon="@drawable/ic_create_white_24dp"
		app:showAsAction="ifRoom|withText"
		android:title="@null"
		android:titleCondensed="@string/button_edit"/>
	<item
		android:id="@+id/wallet_transactions_context_show_qr"
		android:icon="@drawable/ic_action_qr"
		app:showAsAction="ifRoom|withText"
		android:title="@string/action_show_qr"/>
	<item
		android:id="@+id/wallet_transactions_context_browse"
		app:showAsAction="never"
		android:title="@string/action_browse"/>
	<item
		android:id="@+id/wallet_transactions_context_raise_fee"
		app:showAsAction="never"
		android:title="@string/raise_fee_dialog_title"/>

</menu>