<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_entry_padding_horizontal_lax"
        android:layout_marginRight="@dimen/list_entry_padding_horizontal_lax"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_entry_padding_vertical"
            android:layout_marginTop="@dimen/list_entry_padding_vertical"
            android:text="@string/backup_wallet_dialog_message" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_entry_padding_vertical"
            android:divider="@drawable/divider_field"
            android:orientation="horizontal"
            android:showDividers="middle">

            <EditText
                android:id="@+id/backup_wallet_dialog_password"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/import_export_keys_dialog_password"
                android:inputType="textPassword"
                android:singleLine="true" />

            <TextView
                android:id="@+id/backup_wallet_dialog_password_strength"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_field"
            android:orientation="horizontal"
            android:showDividers="middle">

            <EditText
                android:id="@+id/backup_wallet_dialog_password_again"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/backup_wallet_dialog_password_again"
                android:inputType="textPassword"
                android:singleLine="true" />

            <TextView
                android:id="@+id/backup_wallet_dialog_password_mismatch"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/backup_wallet_dialog_password_mismatch"
                android:textColor="@color/fg_error"
                android:textStyle="bold"
                android:visibility="invisible" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/backup_wallet_dialog_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_entry_padding_vertical"
            android:layout_marginTop="@dimen/list_entry_padding_vertical"
            android:checked="false"
            android:text="@string/import_export_keys_dialog_show" />

        <TextView
            android:id="@+id/backup_wallet_dialog_warning_encrypted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_entry_padding_vertical_lax"
            android:layout_marginTop="@dimen/list_entry_padding_vertical_lax"
            android:text="@string/backup_wallet_dialog_warning_encrypted"
            android:textColor="@color/fg_less_significant"
            android:textSize="@dimen/font_size_small" />

        <LinearLayout
            android:id="@+id/backup_wallet_dialog_spending_pin_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_entry_padding_vertical"
            android:divider="@drawable/divider_field"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:visibility="gone">

            <EditText
                android:id="@+id/backup_wallet_dialog_spending_pin"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/private_key_password"
                android:imeOptions="flagNoExtractUi"
                android:inputType="numberPassword"
                android:singleLine="true" />

            <TextView
                android:id="@+id/backup_wallet_dialog_bad_spending_pin"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/private_key_bad_password"
                android:textColor="@color/fg_error"
                android:textStyle="bold"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
