<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_entry_padding_horizontal_lax"
        android:layout_marginRight="@dimen/list_entry_padding_horizontal_lax"
        android:orientation="vertical">

        <TextView
            android:id="@+id/restore_wallet_dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_entry_padding_vertical"
            android:layout_marginTop="@dimen/list_entry_padding_vertical_lax" />

        <EditText
            android:id="@+id/restore_wallet_dialog_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_entry_padding_vertical"
            android:hint="@string/import_export_keys_dialog_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/restore_wallet_dialog_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_entry_padding_vertical"
            android:checked="false"
            android:text="@string/import_export_keys_dialog_show" />

        <TextView
            android:id="@+id/restore_wallet_dialog_replace_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_entry_padding_vertical"
            android:layout_marginTop="@dimen/list_entry_padding_vertical_lax"
            android:text="@string/restore_wallet_dialog_replace_warning"
            android:textColor="@color/fg_less_significant"
            android:textSize="@dimen/font_size_small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_entry_padding_vertical_lax"
            android:layout_marginTop="@dimen/list_entry_padding_vertical_lax"
            android:text="@string/import_keys_dialog_warning"
            android:textColor="@color/fg_less_significant"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>
</ScrollView>
